<resources>
    <string name="app_name">SmartToko</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="kolom_kosong">enter all fields</string>
    <string name="title_activity_admin">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_additem">add item</string>
    <string name="title_laporanjual">report</string>
    <string name="profil">Profile</string>

    <string name="passwor_salah">Wrong password or username</string>

    <string name="kode_barang">item code</string>
    <string name="nama_barang">item name</string>
    <string name="harga_barang">item price</string>
    <string name="jumlah_barang">number of items</string>
    <string name="insert_barang">Insert item</string>
    <string name="list_barang">List item</string>
    <string name="discount">Discount</string>

    <string name="edit">Edit</string>
    <string name="hapus">Delete</string>
    <string name="barang_tidakada">Item not found</string>
    <string name="title_activity_customer">CustomerActiity</string>
    <string name="history">History</string>
    <string name="proses">Process</string>
    <string name="total">Total price</string>
    <string name="jumlah_beli">Purchase amount</string>
    <string name="riwayat_transaksi">transaction history</string>
    <string name="waktu">Time</string>
    <string name="item_limit">Item over limit</string>

    <string name="nama">Name : Nurkholimah Faridhotun</string>
    <string name="kelas">Class : TIF-4A</string>
    <string name="Nim">NIM : 11950121726</string>

    <string name="ganti_bahasa">Change language</string>






</resources>