<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.imah.smarttoko.admin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.imah.smarttoko.admin.ui.additem.LaporanFragment"
        android:label="@string/title_additem"
        tools:layout="@layout/fragment_laporan" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.imah.smarttoko.admin.ui.laporan.ProfilFragment"
        android:label="@string/title_laporanjual"
        tools:layout="@layout/fragment_profil" />
</navigation>