<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.ui.home.HomeFragment"
    android:background="#FFF7F7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/app_name"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:id="@+id/textmenu1" />

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:background="#FFF7F7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textmenu1"
            android:id="@+id/btn_additem">

            <ImageView
                android:id="@+id/img_book"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_barang"
                android:textSize="14dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:id="@+id/addmenu"
                android:fontFamily="@font/poppins"
                android:layout_toRightOf="@+id/img_book"
                android:layout_centerInParent="true" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/list_barang"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/btn_additem"
            android:id="@+id/txt_menu1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_menu1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="#FFF7F7"
            android:id="@+id/barismenu4">


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/rv_listitem" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
