<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
            <import type="android.view.View"/>
        <variable
            name="item"
            type="com.imah.smarttoko.customer.ui.DetailitemActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detailitem"
        tools:context=".customer.ui.DetailitemActivity">

        <TextView
            android:id="@+id/hargatotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:layout_constraintBottom_toTopOf="@+id/proses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_counter"
            app:layout_constraintVertical_bias="0.17000002" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/kotak"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nama_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/aldrich_regular"
                android:text=""
                android:textColor="#204975"
                android:textSize="17sp"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/harga_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/nama_barang"
                android:fontFamily="@font/aldrich_regular"
                android:text=""
                android:textColor="#204975"
                android:textSize="17sp"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/diskon_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/harga_barang"
                android:fontFamily="@font/aldrich_regular"
                android:text=""
                android:textColor="#204975"
                android:textSize="17sp"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/jumlah_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/diskon_barang"
                android:fontFamily="@font/aldrich_regular"
                android:text=""
                android:textColor="#204975"
                android:textSize="17sp"
                android:layout_marginLeft="30dp" />


            <TextView
                android:id="@+id/hargacart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="11dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/aldrich_regular"
                android:textColor="#204975"
                android:textSize="17sp" />


        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vector"
            android:layout_marginLeft="16dp"
            tools:ignore="VectorDrawableCompat" />


        <TextView
            android:id="@+id/txt_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/kotakkecil"
            android:fontFamily="@font/aldrich_regular"
            android:gravity="center"
            android:text="0"
            android:textColor="#204975"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/proses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <Button

            android:id="@+id/proses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#204975"
            android:fontFamily="@font/aldrich_regular"
            android:text="@string/proses"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_down"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/min"
            android:fontFamily="@font/aldrich_regular"
            android:text="UP"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/proses"
            app:layout_constraintEnd_toStartOf="@+id/txt_counter"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <ImageButton
            android:id="@+id/btn_up"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/plus"
            android:fontFamily="@font/aldrich_regular"
            android:text="DOWN"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/proses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/txt_counter"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/txt_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textSize="18dp"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/proses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hargatotal"
            app:layout_constraintVertical_bias="0.120000005" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>